--- a/todoEverydayApp12/View/InputView.xib
+++ b/todoEverydayApp12/View/InputView.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InputViewController" customModule="todoEverydayApp12" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="InputView" customModule="todoEverydayApp12" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="259"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -31,7 +31,7 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </button>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="時間を入力" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A84-Kx-n4O" customClass="DatePickerKeyboard" customModule="OriginalTodoApp" customModuleProvider="target">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="時間を入力" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A84-Kx-n4O" customClass="DatePickerKeyboard" customModule="todoEverydayApp12" customModuleProvider="target">
                     <rect key="frame" x="40" y="30" width="120" height="34"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="120" id="H1y-6Y-x0k"/>
