--- a/todoEverydayApp12/Base.lproj/Main.storyboard
+++ b/todoEverydayApp12/Base.lproj/Main.storyboard
@@ -259,7 +259,7 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="プッシュ通知" id="cE1-ra-DOx">
+                            <tableViewSection headerTitle="通知" id="cE1-ra-DOx">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="60" id="Myp-DX-94h">
                                         <rect key="frame" x="0.0" y="264" width="414" height="60"/>
@@ -270,6 +270,9 @@
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="na5-zZ-sbV">
                                                     <rect key="frame" x="335" y="14.5" width="51" height="31"/>
+                                                    <connections>
+                                                        <action selector="switchChange:" destination="DFM-aC-tsR" eventType="valueChanged" id="LBM-lQ-Z2U"/>
+                                                    </connections>
                                                 </switch>
                                             </subviews>
                                             <constraints>
@@ -289,14 +292,14 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="URLスキーム" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AqQ-sD-Fhq">
-                                                    <rect key="frame" x="20" y="20" width="101.5" height="20.5"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AqQ-sD-Fhq">
+                                                    <rect key="frame" x="20" y="20" width="33.5" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="VUa-4C-Ydh">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="VUa-4C-Ydh">
                                                     <rect key="frame" x="350" y="20" width="44" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -313,8 +316,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="バージョン" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="OsB-lW-E8G">
-                                                    <rect key="frame" x="20" y="20" width="87" height="20.5"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="OsB-lW-E8G">
+                                                    <rect key="frame" x="20" y="20" width="33.5" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -346,6 +349,7 @@
                         <outlet property="settingCell3" destination="Gud-zK-0ao" id="FFI-CM-ySX"/>
                         <outlet property="settingCell4" destination="Hec-Ek-Tgx" id="7fy-2E-QRg"/>
                         <outlet property="settingCell5" destination="xCs-0F-k0x" id="c9d-bH-iKE"/>
+                        <outlet property="switchButton" destination="na5-zZ-sbV" id="h4f-eH-d9I"/>
                         <segue destination="uwI-NK-myt" kind="show" identifier="mojiChange" id="2dP-aE-zVp"/>
                         <segue destination="KsL-b9-tVg" kind="show" identifier="moji2" id="Wwe-4E-bAO"/>
                         <segue destination="2Ie-71-KCF" kind="show" identifier="select" id="QQS-Vb-Zu9"/>
